--- a/index.html
+++ b/index.html
@@ -1044,23 +1044,22 @@
 						</a>
 					</div>
 				</div>
-				<!-- <div class="scrollHalf__grupo row h-100" data-scroll>
-					<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto second-cs">
-						<img src="images/case-study/self_img.png" class="imgResponsive" />
+				<div class="scrollHalf__grupo row h-100" data-scroll>
+					<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto website-second-cs">
+						<img src="images/case-study/erp-web.png" class="img-fluid" alt="ERP Web" />
 					</div>
 					<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 offset-xl-1 mt-auto mb-auto">
-						<img src="images/case-study/self_logo.png" alt="" class="icon-img">
-						<h3 class="techCat">Game App</h3>
-						<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-						<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
-						<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
+						<img src="images/case-study/erp-logo.png" class="icon-img" alt="ERP Logo">
+						<h2 class="pt-3 case-study-heading">ERP</h2>
+						<p class="pt-3 case-study-text">Improve your day-to-day business operations with our ERP tool. Boost productivity, improve customer experience, and boost operational efficiency!</p>
+						<a target="_blank" href="erp.html" class="btn btn-naked text-uppercase pt-5">
 							<span class="btn-line btn-line-before"></span>
 							<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
 							<span class="btn-line btn-line-after"></span>
 						   </a>
 					</div>
 				</div>
-				<div class="scrollHalf__grupo row h-100" data-scroll>
+				<!--<div class="scrollHalf__grupo row h-100" data-scroll>
 					<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto third-cs">
 						<img src="images/case-study/stop_vaping_img.png" class="imgResponsive" />
 					</div>
