--- a/portfolio.html
+++ b/portfolio.html
@@ -439,7 +439,7 @@
 				<div class="pbwide shadow portfolio-gradient1">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid logo-img">
+							<img src="images/case-study/placea-logo.png" alt="Placea Logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>AR</span></div>
 						<h3 class="mt30 mb30 text-white">Placea Furniture Store</h3>
@@ -469,7 +469,7 @@
 				<div class="pbwide shadow portfolio-gradient2">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/evil-witch-logo.png" alt="logo" class="img-fluid logo-img">
+							<img src="images/case-study/evil-witch-logo.png" alt="Evil Witch Logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>Design</span></div>
 						<h3 class="mt30 mb30 text-white">Evil Witch</h3>
@@ -499,7 +499,7 @@
 				<div class="pbwide shadow portfolio-gradient3">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/toys-short-logo.png" alt="logo" class="img-fluid logo-img">
+							<img src="images/case-study/toys-short-logo.png" alt="Toys Sort Logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>Game</span></div>
 						<h3 class="mt30 mb30 text-white">Toys Sort</h3>
@@ -529,7 +529,7 @@
 				<div class="pbwide shadow portfolio-gradient4">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/vero-logo.png" alt="logo" class="img-fluid logo-img">
+							<img src="images/case-study/vero-logo.png" alt="Vero Logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>Mobile App</span></div>
 						<h3 class="mt30 mb30 text-white">Vero</h3>
@@ -559,7 +559,7 @@
 				<div class="pbwide shadow portfolio-gradient5">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/homestore-logo.png" alt="logo" class="img-fluid logo-img">
+							<img src="images/case-study/homestore-logo.png" alt="Home Store Logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>Mobile App</span></div>
 						<h3 class="mt30 mb30 text-white">Home Store</h3>
@@ -589,7 +589,7 @@
 				<div class="pbwide shadow portfolio-gradient6">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/homestore-logo.png" alt="logo" class="img-fluid">
+							<img src="images/case-study/homestore-logo.png" alt="Home Store Logo" class="img-fluid">
 						</div>
 						<div class="widebloktag"><span>Website</span></div>
 						<h3 class="mt30 mb30 text-white">Home Store</h3>
@@ -609,6 +609,36 @@
 							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
 								<div class="">
 									<img src="images/case-study/homestore-web.png" alt="img" class="img-fluid portfolio-img">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-12 single-card-item website">
+				<div class="pbwide shadow portfolio-gradient7">
+					<div class="portfolio-item-info-tt d-block ms-auto">
+						<div class="logowide mb20">
+							<img src="images/case-study/erp-logo.png" alt="ERP Logo" class="img-fluid">
+						</div>
+						<div class="widebloktag"><span>Website</span></div>
+						<h3 class="mt30 mb30 text-white">Home Store</h3>
+						<ul class="info-list-ul">
+							<li>Product Strategy</li>
+							<li>Product UI/UX Design</li>
+							<li>Branding Design</li>
+							<li>Design System</li>
+						</ul>
+						<a href="erp.html" class="btn-outline lnk mt30">View Case Study 
+							<i class="fas fa-chevron-right fa-icon"></i>
+							<span class="circle"></span>
+						</a>
+					</div>
+					<div class="portfolio-wide-image d-block me-auto">
+						<div class="img-wide-blocktt tilt-outer">
+							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
+								<div class="">
+									<img src="images/case-study/erp-web.png" alt="img" class="img-fluid portfolio-img">
 								</div>
 							</div>
 						</div>
